--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "testcases"]
 	path = testcases
 	url = https://github.com/ZYHowell/Compiler-2021-testcases
+[submodule "tutorial/Yx"]
+	path = tutorial/Yx
+	url = https://github.com/ZYHowell/Yx
